add PR comments and update readme
